refactor(后端):重构并整合用户（学生/教练）数据结构，跑通注册全流程
