# backend/src/main/kotlin/io/github/shaoyuanyu/ttts/persistence/student/StudentEntity.kt
@@ -1,31 +1,25 @@
-@file:OptIn(ExperimentalTime::class)
 package io.github.shaoyuanyu.ttts.persistence.student
 
 import io.github.shaoyuanyu.ttts.dto.student.Student
-import kotlinx.datetime.TimeZone
-import kotlinx.datetime.toLocalDateTime
+import io.github.shaoyuanyu.ttts.persistence.user.UserEntity
 import org.jetbrains.exposed.v1.core.dao.id.EntityID
-import org.jetbrains.exposed.v1.dao.UUIDEntity
-import org.jetbrains.exposed.v1.dao.UUIDEntityClass
+import org.jetbrains.exposed.v1.dao.Entity
+import org.jetbrains.exposed.v1.dao.EntityClass
 import java.util.UUID
-import kotlin.time.ExperimentalTime
 
-class StudentEntity(uuid: EntityID<UUID>) : UUIDEntity(uuid) {
-    companion object : UUIDEntityClass<StudentEntity>(StudentTable)
+class StudentEntity(id: EntityID<UUID>) : Entity<UUID>(id) {
+    companion object : EntityClass<UUID, StudentEntity>(StudentTable)
 
-    var username by StudentTable.username
+    var userId by UserEntity referencedOn StudentTable.id
     var balance by StudentTable.balance
     var maxCoach by StudentTable.max_coach
     var currentCoach by StudentTable.current_coach
-    var createdAt by StudentTable.created_at
-    var lastLoginAt by StudentTable.last_login_at
 }
-fun StudentEntity.expose()= Student(
+
+fun StudentEntity.expose() = Student(
     uuid = id.value.toString(),
-    username = username,
+    username = userId.username,
     balance = balance,
     maxCoach = maxCoach,
-    currentCoach = currentCoach,
-    createdAt = createdAt.toLocalDateTime(TimeZone.of("Asia/Shanghai")),
-    lastLoginAt = lastLoginAt.toLocalDateTime(TimeZone.of("Asia/Shanghai"))
+    currentCoach = currentCoach
 )
